# Utz_Renamer_App

./: Pasted-Create-a-web-application-where-users-can-upload-multiple-image-files-and-have-them-automatically-ren-1734542709702.txt  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  requirements.txt.md  utils.py  web.config
attached_assets/: Pasted-Migrate-existing-applications-to-Azure-Existing-web-applications-can-be-redeployed-to-Azure-as-follo-1741270987353.txt
static/js/: upload.js
templates/: index.html
