[tool.poetry]
name = "repl-nix-imagemagictool"
version = "0.1.0"
description = "Image renamer tool for specific retailers."
authors = ["Your Name <thegberg@utzsnacks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
email-validator = ">=2.2.0"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
psycopg2-binary = ">=2.9.10"
werkzeug = ">=3.1.3"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"